k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transfer-shortener-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - transfer.sixtyfive.me
      secretName: transfer-shortener-tls
  rules:
    - host: transfer.sixtyfive.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transfer-shortener
                port:
                  number: 8080
